--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 
 
 <meta property="og:type" content="website">
-<meta property="og:title" content="Hailiang's bolg">
+<meta property="og:title" content="Hailiang's Bolg">
 <meta property="og:url" content="http://zhailiange.com/index.html">
-<meta property="og:site_name" content="Hailiang's bolg">
+<meta property="og:site_name" content="Hailiang's Bolg">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Hailiang's bolg">
+<meta name="twitter:title" content="Hailiang's Bolg">
 
 
 
@@ -123,7 +123,7 @@
 
 
 
-  <title> Hailiang's bolg </title>
+  <title> Hailiang's Bolg </title>
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage" lang="zh-Hans">
@@ -156,7 +156,7 @@
   <div class="custom-logo-site-title">
     <a href="/"  class="brand" rel="start">
       <span class="logo-line-before"><i></i></span>
-      <span class="site-title">Hailiang's bolg</span>
+      <span class="site-title">Hailiang's Bolg</span>
       <span class="logo-line-after"><i></i></span>
     </a>
   </div>
@@ -247,9 +247,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
@@ -370,9 +370,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
@@ -515,9 +515,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
@@ -660,9 +660,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
@@ -805,9 +805,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
@@ -954,9 +954,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
@@ -1111,9 +1111,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
@@ -1259,9 +1259,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
@@ -1382,9 +1382,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
@@ -1531,9 +1531,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's bolg">
+    <meta itemprop="name" content="Hailiang's Bolg">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
     </span>
   </span>
 
