--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
       
         
-          <p>学习是一场旅行，从起点到终点以及一路的游玩，地图、装备、向导、和必备的知识技能都必不可少。就像旅行的意义不仅仅是你拍了多少张照片、看到了多少美景而是刷新了你多少认知和偏见一样。学习之旅的重点并不仅仅是获得一堆无用的知识，而是让你能够充分运用这些知识，提高自身能力，以便能做到那些在学习前无法做到的事情。</p>
+          <p>学习是一场旅行，从起点到终点以及一路的游玩，地图、装备、向导、和知识技能都必不可少。就像旅行的意义不仅仅是你拍了多少张照片、看到了多少美景，而是刷新了你多少认知和偏见。学习之旅的重点并不仅仅是获得一堆无用的知识，而是让你能够充分运用这些知识，提高自身能力，以便能做到那些在学习前无法做到的事情。</p>
 <p>起点与终点之间即是差距。培训以及学习之旅首要做的就是识别这个差距。那么，这个差距是什么呢？</p>
           <!--noindex-->
           <div class="post-button text-center">
