--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 
 
 <meta property="og:type" content="website">
-<meta property="og:title" content="Hailiang's Bolg">
+<meta property="og:title" content="Hailiang's Blog">
 <meta property="og:url" content="http://zhailiange.com/index.html">
-<meta property="og:site_name" content="Hailiang's Bolg">
+<meta property="og:site_name" content="Hailiang's Blog">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Hailiang's Bolg">
+<meta name="twitter:title" content="Hailiang's Blog">
 
 
 
@@ -123,7 +123,7 @@
 
 
 
-  <title> Hailiang's Bolg </title>
+  <title> Hailiang's Blog </title>
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage" lang="zh-Hans">
@@ -156,7 +156,7 @@
   <div class="custom-logo-site-title">
     <a href="/"  class="brand" rel="start">
       <span class="logo-line-before"><i></i></span>
-      <span class="site-title">Hailiang's Bolg</span>
+      <span class="site-title">Hailiang's Blog</span>
       <span class="logo-line-after"><i></i></span>
     </a>
   </div>
@@ -257,9 +257,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
@@ -403,9 +403,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
@@ -550,9 +550,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
@@ -695,9 +695,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
@@ -840,9 +840,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
@@ -985,9 +985,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
@@ -1130,9 +1130,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
@@ -1279,9 +1279,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
@@ -1425,9 +1425,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
@@ -1573,9 +1573,9 @@
   </span>
 
   <span style="display:none" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="Hailiang's Bolg">
+    <meta itemprop="name" content="Hailiang's Blog">
     <span style="display:none" itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-      <img style="display:none;" itemprop="url image" alt="Hailiang's Bolg" src="">
+      <img style="display:none;" itemprop="url image" alt="Hailiang's Blog" src="">
     </span>
   </span>
 
