--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
 <p>除此之外，野口真人建议还可用根据钱包所购买的商品或服务价格来确定。比如，消费钱包中的商品或服务，它们的价格是综合考虑个人的满足程度及生产成本之后确定的。投资钱包中的商品或服务，它们的价值由将来创造出的现金流量决定，其价格尽量不要偏离现金流量过远，否则尽量不要出手。投机钱包中的商品或服务，其价格既不是由成本决定，也不是由现金流量决定，如彩票是由庄家事先决定好奖金数额后再决定价格；贵金属及绘画作品等商品价格，则由其稀缺性而决定。</p>
 <p>那上面提到的“现金流量”是什么意思呢？野口真人在书中指出，所谓现金流量就是“将来产生的金钱”。它指的并不是存在于当下的现金，而是为了表现出资金进进出出的动态，所以有“流”这个字。某项投资能带来多少货币价值，是基于其将来产生的现金流量的数额。这是金融世界的观点。</p>
 <p>以上，就是三个钱包理财术。当我们将收入分别放入这三个钱包时，就会自动自觉地发现，我们是消费多过投资，还是投机多过投资，或者干脆只有消费没有投资和投机。了解了这三个钱包的投入比例后，我们可以再结合之前提到的“四个篮子”计划，制定一个相对合理的、稳定的理财组合。比如，把投资钱包里的钱放入“经济独立篮子”中，专注于低风险的投资；投机钱包的钱放入“发家致富篮子”，即便亏本也影响不大，而一旦获利，则是意外之喜。</p>
+<p>注：本篇文章首发自今日头条<a href="https://www.toutiao.com/i6630401344442204679/" target="_blank" rel="external">《掌握“三个钱包”理财术，你就不会再乱花钱了！》</a></p>
 
           
         
